Fix checkstyle